ASBIR-ROS2/log/build_2023-04-26_12-43-13/asbir_navigation/stderr.log
  File "/home/aralab/ASBIR/ASBIR-ROS2/install/asbir_navigation/lib/python3.8/site-packages/asbir_navigation/buildBestPath.py", line 233
    pathTransforms =
                    ^
SyntaxError: invalid syntax

